--- a/css/main.scss
+++ b/css/main.scss
@@ -6,94 +6,4 @@ $fa-font-path: "../node_modules/font-awesome/fonts";
 @import "./reveal/reveal.scss";
 @import "./theme/simple";
 
-
-.reveal .slides{
-  section {
-    &.huge-text {
-      font-size: 120%;
-      text-align: left;
-    }
-    .no-border {
-      border: none;
-      box-shadow: none;
-    }
-    .fade-out.visible {
-      display: none;
-    }
-
-    .fragment.highlight-orange {
-      opacity: 1;
-      visibility: visible;
-      &.visible {
-        color: orange;
-      }
-    }
-
-    .fragment.highlight-bold {
-     opacity: 1;
-     visibility: visible;
-     &.visible {
-       font-weight: bold;
-     }
-   }
-
-   .title {
-     font-size: 48px;
-     .title-divider {
-       color: orange;
-     }
-     .subtitle {
-       font-size: 24px;
-       color: #aaa;
-     }
-   }
-
-    svg {
-      border: 1px solid #ccc;
-      border-radius: 3px;
-    }
-    pre {
-      width: 100% !important;
-      font-size: 0.4em !important;
-    }
-
-    ul>li {
-      font-size: 75%;
-      margin-bottom: 10px;
-    }
-
-    .upper-case {
-      text-transform: uppercase;
-    }
-
-    .code-link {
-      font-size: 60%;
-      display: block;
-    }
-
-    iframe.gallery {
-      width: 100%;
-      height: 400px;
-    }
-    .heading-row {
-      background-color: #1A237E;
-      color: white;
-      margin-right: -30px;
-      margin-left: -30px;
-      padding-left: 30px;
-      img {
-        height: 100px;
-        background: none;
-      }
-      p {
-        margin-top: 20px;
-        padding-left: 20px;
-        margin-top: 20px;
-        padding-left: 20px;
-      }
-      a, a:hover {
-        color: #fff;
-      }
-    }
-  }
-}
+@import "./custom.scss";
